# ChangeLog for sys-apps/module-init-tools
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/module-init-tools/ChangeLog,v 1.79 2005/05/11 13:52:44 azarah Exp $

*module-init-tools-3.2_pre4 (11 May 2005)

  11 May 2005; Martin Schlemmer <azarah@gentoo.org>
  +module-init-tools-3.2_pre4.ebuild:
  Add -pre version that support loading of all aliases - maybe that will urge
  gregkh in getting hotplug-ng in/ready for the tree 8)

*module-init-tools-3.1-r1 (20 Mar 2005)

  20 Mar 2005; <solar@gentoo.org> module-init-tools-3.0-r2.ebuild,
  +module-init-tools-3.1-r1.ebuild:
  - Our zlib.so is in /lib vs /usr/lib so it should be safe for us to link with
  just -lz - By not linking with -Wl,-Bstatic -lz -Wl,-Bsynamic we save a few
  bytes on the final linked elf executable binary sizes. This also fixes text
  relocations that were showing up in this package.

  18 Feb 2005; Tony Vroon <chainsaw@gentoo.org>
  +files/modutils-2.4.27-gcc4.patch, module-init-tools-3.1.ebuild:
  GCC 4 compatability update; closes bug #80588

  16 Feb 2005; <solar@gentoo.org> module-init-tools-3.1.ebuild:
  - filtering pic is no longer needed

  12 Jan 2005; Mike Frysinger <vapier@gentoo.org>
  module-init-tools-3.0-r2.ebuild, module-init-tools-3.1.ebuild:
  Remove USE=no-old-linux until modules-update can be updated to use 2.6 depmod.

  23 Dec 2004; Mike Frysinger <vapier@gentoo.org>
  +files/modutils-2.4.27-gcc34.patch, module-init-tools-3.0-r2.ebuild,
  module-init-tools-3.1.ebuild:
  Add patch to fix gcc-3.4.x building #74538 by splite.

  07 Dec 2004; Mike Frysinger <vapier@gentoo.org>
  +files/modutils-2.4.27-PATH_MAX.patch, module-init-tools-3.1.ebuild:
  PATH_MAX can be found in sys/param.h.

  22 Nov 2004; Mike Frysinger <vapier@gentoo.org>
  +files/3.1-modprobe.d.5.bz2, module-init-tools-3.1.ebuild:
  Make sure we dont try to regen manpages.

*module-init-tools-3.1 (22 Nov 2004)
